--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "protractor-webpack",
   "version": "0.1.0",
   "description": "Synchronizes Protractor test runs with serving a Webpack bundle",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "bin": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/thompsnm/protractor-webpack#readme",
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "commander": "^2.9.0",
     "webpack-dev-server": "^2.4.5"
   },
