--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-webpack",
-  "version": "1.0.1-rc.1",
+  "version": "1.0.1",
   "description": "Synchronizes Protractor test runs with serving a Webpack bundle",
   "main": "lib/index.js",
   "bin": "bin/index.js",
